--- a/tailwind.css
+++ b/tailwind.css
@@ -3,9 +3,11 @@
 @tailwind utilities;
 
 @layer base {
-  @import url("https://fonts.googleapis.com/css?family=EB+Garamond%3A300%2C400%2C400i%2C500%2C500i%2C600%2C700%7CEB+Garamond%3Aital%3A300%2C400%2C400i%2C500%2C500i%2C600%2C700%7CDancing+Script%3A300%2C400%2C400i%2C500%2C500i%2C600%2C700%7CRaleway%3A300%2C400%2C400i%2C500%2C500i%2C600%2C700&subset=latin-ext&display=swap&ver=1.0.0");
+  @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300&family=Dancing+Script&family=EB+Garamond&display=swap');
+}
 
-  body {
-    font-family: Raleway, sans-serif;
+@layer components {
+  .hak{
+    padding:0;
   }
 }
