--- a/tailwind.css
+++ b/tailwind.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 @layer base {
-  @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300&family=Dancing+Script&family=EB+Garamond&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300&family=Dancing+Script&family=EB+Garamond&family=Raleway:wght@300&display=swap');
+
+  body{
+    font-family: 'Raleway', sans-serif;
+  }
 
   h1{
     @apply text-3xl font-dancing text-dark
