--- a/tailwind.css
+++ b/tailwind.css
@@ -3,17 +3,20 @@
 @tailwind utilities;
 
 @layer base {
-  @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300&family=Dancing+Script&family=EB+Garamond&family=Raleway:wght@300&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=EB+Garamond&family=Raleway:wght@300&display=swap');
 
   body{
     font-family: 'Raleway', sans-serif;
   }
 
   h1{
-    @apply text-3xl font-dancing text-dark
+    @apply text-3xl font-garamond font-bold text-dark
   }
   h2{
-    @apply text-3xl font-dancing text-dark
+    @apply text-3xl font-garamond font-bold text-dark
+  }
+  h3{
+    @apply text-2xl font-garamond font-medium text-dark pr-4
   }
 
   section, header, nav{
